--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/сss/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Api запросы</title>
 </head>
 <body>
     <div class="wrapper">
-        
+        <header class="header">
+            <div class="header__top">
+                <div class="header__topContent container">
+                    <div class="header__logo">Ваш любимый <br><span class="header__logoDecor">Кинотеатр</span></div>
+                    <div class="header__search-Wrapper">
+                        <input type="text" class="header__searchBox">
+                    </div>
+                </div>
+                <!-- header__topContent -->
+            </div>
+            <!-- header__top -->
+        </header>
     </div>
     <div class="modalFilm modal active">
         <div class="modalFilm__body modal__body">
