stripped the search form

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
             <div class="header__top">
                 <div class="header__topContent container">
                     <div class="header__logo">Ваш любимый <br><span class="header__logoDecor">Кинотеатр</span></div>
-                    <div class="header__search-Wrapper">
-                        <input type="text" class="header__searchBox">
-                    </div>
+                    <form action="#" class="form">
+                        <input class="header__searchBox" type="text" name="Search" placeholder="Фильмы, сериалы, персоны">
+                        <button class="form__btn"><img class="form__btn-svg" src="./img/icon/search.svg" alt="search"></button>
+                    </form>
                 </div>
                 <!-- header__topContent -->
             </div>
