made changes to the design

--- a/index.html
+++ b/index.html
@@ -20,10 +20,23 @@
                 </div>
                 <!-- header__topContent -->
             </div>
+            <div class="header__content container">
+                <div class="header__title">Смотрите фильмы <br> на вашей любимой платформе</div>
+                <div class="header__wrapper">
+                    <div class="header__FactFilm">
+                        <div class="header__FactFilm-title">
+                            Титаник
+                        </div>
+                    </div>
+                    <div class="header__films">
+
+                    </div>
+                </div>
+            </div>  
             <!-- header__top -->
         </header>
     </div>
-    <div class="modalFilm modal active">
+    <!-- <div class="modalFilm modal active">
         <div class="modalFilm__body modal__body">
             <div class="modalFilm__content modal__content">
                 <span class="modalFilm__close modal__close">X</span>
@@ -33,7 +46,7 @@
                 <div class="modal__title title"></div>
             </div>
         </div>
-    </div>
+    </div> -->
     <script src="./js/index.js" type="module"></script>
 </body>
 </html>
