changed the design of the slider

--- a/index.html
+++ b/index.html
@@ -25,11 +25,27 @@
                 <div class="header__wrapper">
                     <div class="header__FactFilm">
                         <div class="header__FactFilm-title">
-                            Титаник
+                            Интересные факты из <span class="header__logoDecor">КиноИндустрии</span>
+                        </div>
+                        <div class="header__FactFilm-text">
+                            <span class="header__FactFilm-decor">Мы подбираем интересный <br>факт для вас...</span>
                         </div>
                     </div>
                     <div class="header__films">
-
+                        <div class="card">
+                            <div class="card__img">
+                                <img class="card__img-item" src="#" alt="#">
+                            </div>
+                            <div class="card__title">Кримнальное чтиво</div>
+                            <div class="card__inner">
+                                <div class="card__wrapper">
+                                    <p class="card__text">Режиссер:<span class="card__decor">Да винчи</span></p>
+                                    <p class="card__text">Год выпуска:<span class="card__decor">1999</span></p>
+                                    <p class="card__text">Оценка зрителей:<span class="card__decor">9/10</span></p>
+                                </div>
+                                <button class="card__btn btn">Узнать больше</button>
+                            </div>  
+                        </div>
                     </div>
                 </div>
             </div>  
