--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div class="header__films">
-                        <div class="card">
+                        <!-- <div class="card">
                             <div class="card__img">
                                 <img class="card__img-item" src="#" alt="#">
                             </div>
@@ -45,7 +45,7 @@
                                 </div>
                                 <button class="card__btn btn">Узнать больше</button>
                             </div>  
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>  
