made a slider based on the received api data

--- a/index.html
+++ b/index.html
@@ -32,27 +32,14 @@
                         </div>
                     </div>
                     <div class="header__films">
-                        <!-- <div class="card">
-                            <div class="card__img">
-                                <img class="card__img-item" src="#" alt="#">
-                            </div>
-                            <div class="card__title">Кримнальное чтиво</div>
-                            <div class="card__inner">
-                                <div class="card__wrapper">
-                                    <p class="card__text">Режиссер:<span class="card__decor">Да винчи</span></p>
-                                    <p class="card__text">Год выпуска:<span class="card__decor">1999</span></p>
-                                    <p class="card__text">Оценка зрителей:<span class="card__decor">9/10</span></p>
-                                </div>
-                                <button class="card__btn btn">Узнать больше</button>
-                            </div>  
-                        </div> -->
+                        
                     </div>
                 </div>
             </div>  
             <!-- header__top -->
         </header>
     </div>
-    <!-- <div class="modalFilm modal active">
+    <div class="modalFilm modal active">
         <div class="modalFilm__body modal__body">
             <div class="modalFilm__content modal__content">
                 <span class="modalFilm__close modal__close">X</span>
@@ -62,7 +49,7 @@
                 <div class="modal__title title"></div>
             </div>
         </div>
-    </div> -->
+    </div>
     <script src="./js/index.js" type="module"></script>
 </body>
 </html>
