added animation for fact loading

--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
                         <div class="header__FactFilm-title">
                             Интересные факты из <span class="header__logoDecor">КиноИндустрии</span>
                         </div>
-                        <div class="header__FactFilm-text">
-                            <span class="header__FactFilm-decor">Мы подбираем интересный <br>факт для вас...</span>
+                        <div class="header__FactFilm-content">
+                            <div class="FactLoading">
+                                <span class="FactLoading__text">Мы подбираем интересный <br>факт для вас...</span>
+                            </div>
+                            <div class="header__FactFilm-text">
+
+                            </div>
+                            <span class="header__FactFilm-name"></span>
                         </div>
                     </div>
                     <div class="header__films">
