--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
                             <div class="header__FactFilm-text">
 
                             </div>
-                            <span class="header__FactFilm-name"></span>
+                            <p class="header__FactFilm-name">
+                                
+                            </p>
                         </div>
                     </div>
                     <div class="header__films">
