--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
             <!-- header__top -->
         </header>
     </div>
-    <div class="modalFilm modal active">
+    <div class="modalFilm modal ">
         <div class="modalFilm__body modal__body">
             <div class="modalFilm__content modal__content">
                 <span class="modalFilm__close modal__close">X</span>
-                <div class="modal__img block__img">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/rBZNLvBOXCo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <!-- <div class="modal__img block__img">
                     <img class="modal__img-item" src="" alt="img">
-                </div>
+                </div> -->
                 <div class="modal__title title"></div>
             </div>
         </div>
