bug with slider

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="header__top">
                 <div class="header__topContent container">
                     <div class="header__logo">Ваш любимый <br><span class="header__logoDecor">Кинотеатр</span></div>
-                    <form class="form" action="#" >
+                    <form class="form" action="#">
                         <input class="header__searchBox" type="text" name="Search" placeholder="Фильмы, сериалы, персоны">
-                        <button class="form__btn"><img class="form__btn-svg" src="./img/icon/search.svg" alt="search"></button>
+                        <button type="submit" class="form__btn"><img class="form__btn-svg" src="./img/icon/search.svg" alt="search"></button>
                     </form>
                 </div>
                 <!-- header__topContent -->
