did a movie search by keywords

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                     <div class="header__films">
-                        
+                        <div class="header__NothingFound header__NothingFound_active">Ничего не найдено</div>
                     </div>
                 </div>
             </div>  
